css/styles.css
/* Fonts */

@font-face {
    font-family: 'Overpass';
    src: url(../fonts/Overpass-VariableFont_wght.ttf);
}

@font-face {
    font-family: 'InterTight';
    src: url(../fonts/InterTight-VariableFont_wght.ttf);
}

@font-face {
    font-family: 'Genos';
    src: url(../fonts/Genos-VariableFont_wght.ttf);
}


/* Global */

:root {
    --btn-color1: #aa80ff;
    --btn-color2: #66cc99;
    --btn-color3: #cc6699;

}

*, ::before, ::after {
    padding: 0;
    margin: 0;
}

html {
    scroll-behavior: smooth;
    box-sizing:border-box;
}

body {
    background-color:whitesmoke;
    font-size: 1.2vw;
    color: #4a4a4a;
}

/* Header */

header {
    position: fixed;
    width: 100%;
    height: auto;
    background-color: white;
    margin: 0 auto;
    padding: 15px;
    z-index:5;
}

header h2, #title, #resume{
    display: inline;
}

#title {
    margin-left: 5px
}

#bar {
    color: var(--btn-color1);
    font-weight: 800;
}

#resume {
    float: right;
    margin-right: 25px;
    margin-top: 4px;
}

#resume a {
    text-decoration: none;
    color: #545454;
    transition: background-color 250ms, color 350ms;
    padding: 2px;
}

#resume a:hover {
    color: blueviolet;
    background-color: #e3e3e3;
}

/* Body */

main {
    padding-top: 70px;
}

#container {
    margin: 0 auto;
    position: absolute;
}

#introduction {
    padding-bottom: 40px;
    
    position:relative;
    left: 225px;
    width: 75%;
    max-width: 800px;
}

.columns {
    position: relative;
    display: grid;
    left: 95px;
    bottom: 0;
    padding-bottom: 40px;
    width: 80%;
    grid-template-columns: 33% 33% 33%;
    column-gap: 1rem;
}

.project {
    outline: solid 2px #8f8f8f;
    background-color: whitesmoke;
    border-radius: 15px;
    padding: 10px;
    margin: 10px auto;
    transition: outline 250ms ease-in-out,background-color 250ms ease-in-out;
    transition-delay: 50ms;
}

.project:hover {
    outline: solid 6px black;
    background-color: white;
}

h1 {
    font-family: 'InterTight', sans-serif;
    font-weight: 500;
    font-size: 2.3rem;
    padding: 10px 0 8px 0;
    color: black;
}

h2 {
    font-family: 'InterTight', sans-serif;
    font-weight: 600;
    font-size: 1.3rem;
    padding: 14px 0 8px 0;
    color: black;
}

p {
    font-family: 'Overpass', 'Arial', sans-serif;
    font-size: 1.1rem;
}

#avatar {
    float: left;
    margin: 15px 15px 15px 0;
    border-radius: 15%;    
    border: solid 5px black;
}


.link {
    padding: 5px 8px;
    margin: 10px;
    color:whitesmoke;
    background-color:blueviolet;
    border: solid 4px black;
    transition: background-color 300ms ease-in-out, color 400ms ease-in-out;
    display: block;
    font-family: 'Genos';
    font-size: 1.2rem;
    font-weight: 500;
}

.link:hover {
    background-color: white;
    color: blueviolet;
    cursor: pointer;
}

.tags {
    padding: 8px 0;
    font-size: 1.1rem;
    font-weight: 500;
    color: #7c7c7c;
    font-family:'Genos';
}

.python {
    color: #4B8BBE;
}

.sql {
    color: #ff9326;
}

.tableau {
    color: #C7233B;
}

.excel {
    color: #1D6F42;
}

#other {
    padding-bottom: 40px;
    
    position:relative;
    left: 225px;
    width: 75%;
    max-width: 800px;
}


/* Footer */

footer {
    width: 100%;
    height: 150px;
}

/* Media queries */

@media screen and (max-width: 1200px) {

    #introduction {
        left: 95px;
        width: 80%;
    }

    #other {
        left: 95px;
        width: 80%;
    }
}

@media screen and (max-width: 1000px) {

    #introduction {
        padding-bottom: 15px;
    }
}

@media screen and (max-width: 800px) {

    #introduction {
        padding-bottom: 20px;
        left: 30px;
        width: 90%;
    }

    #avatar {
        width: 25%;
    }
    
    #other {
        left: 30px;
        width: 90%;
    }

    .columns {
        left: 40px;
        grid-template-columns: 100%;
    }
}

@media screen and (max-width: 600px) {

    #introduction {
        padding-bottom: 15px;
        left: 10px;
        width: 90%;
    }

    #other {
        left: 15px;
        width: 90%;
    }

    #avatar {
        width: 35%;
    }

    .columns {
        left: 20px;
        width: 94%;
        max-width: 500px;
        padding-bottom: 10px;
    }
}

